feat(expense): find expense of authenticated user
