# src/Interfaces/Http/Api/V1/Expense/Controllers/ExpenseApiController.php
@@ -7,11 +7,17 @@ namespace Src\Interfaces\Http\Api\V1\Expense\Controllers;
 use Exception;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Gate;
+use OpenApi\Attributes\Get;
 use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes\Parameter;
 use OpenApi\Attributes\Post;
 use OpenApi\Attributes\RequestBody;
+use OpenApi\Attributes\Schema;
 use Src\Application\UseCases\Expense\Register\DTO\RegisterExpenseDTO;
 use Src\Application\UseCases\Expense\Register\RegisterExpenseAction;
+use Src\Application\UseCases\Expense\Retrieve\RetrieveExpenseAction;
+use Src\Domain\ValueObjects\Id;
 use Src\Interfaces\Http\Api\V1\Expense\Requests\Register\RegisterExpenseApiRequest;
 use Src\Interfaces\Http\Api\V1\Expense\Resources\ExpenseResource;
 use Src\Interfaces\Http\Controller;
@@ -19,7 +25,10 @@ use Symfony\Component\HttpFoundation\Response;
 
 class ExpenseApiController extends Controller
 {
-    public function __construct(private readonly RegisterExpenseAction $registerExpenseAction) {}
+    public function __construct(
+        private readonly RegisterExpenseAction $registerExpenseAction,
+        private readonly RetrieveExpenseAction $retrieveExpenseAction
+    ) {}
 
     /**
      * Display a listing of the resource.
@@ -45,7 +54,7 @@ class ExpenseApiController extends Controller
             new \OpenApi\Attributes\Response(
                 response: Response::HTTP_CREATED,
                 description: 'Expense registered successfully.',
-                content: new JsonContent(ref: '#/components/schemas/RegisteredExpenseSwaggerResponse')
+                content: new JsonContent(ref: '#/components/schemas/ExpenseSwaggerResponse')
             ),
             new \OpenApi\Attributes\Response(
                 response: Response::HTTP_BAD_REQUEST,
@@ -73,12 +82,49 @@ class ExpenseApiController extends Controller
         );
     }
 
-    /**
-     * Display the specified resource.
-     */
-    public function show(string $id)
+    #[Get(
+        path: '/api/v1/expense',
+        description: 'Retrieves the detailed expense record for the authenticated user but only expenses that the authenticated user has permission to view will be returned.',
+        summary: 'Retrieves the detailed expense record for the authenticated user.',
+        security: ['bearerAuth'],
+        tags: ['Expense'],
+        parameters: [
+            new Parameter(
+                name: 'id',
+                description: 'The id (uuid) of the expense record to be retrieved.',
+                in: 'path',
+                required: true,
+                schema: new Schema(
+                    type: 'string'
+                ),
+                example: '31e7d216-58d3-4fdd-8a87-57c16adbbf63'
+            ),
+        ],
+        responses: [
+            new \OpenApi\Attributes\Response(
+                response: Response::HTTP_OK,
+                description: 'Expense registered successfully.',
+                content: new JsonContent(ref: '#/components/schemas/ExpenseSwaggerResponse')
+            ),
+            new \OpenApi\Attributes\Response(
+                response: Response::HTTP_BAD_REQUEST,
+                description: 'The server could not process the request due to invalid input.'
+            ),
+            new \OpenApi\Attributes\Response(
+                response: Response::HTTP_UNAUTHORIZED,
+                description: 'Unauthorized'
+            ),
+        ]
+    )]
+    public function show(string $id): ExpenseResource
     {
-        //
+        $id = new Id($id);
+
+        $expense = $this->retrieveExpenseAction->handle($id);
+
+        Gate::authorize('view', $expense);
+
+        return ExpenseResource::make($expense);
     }
 
     /**
